package com.uteq.unidad3.domain;

public enum TipoServicio {
    URBANO, INTERPROVINCIAL, ESCOLAR, CARGA_LIVIANA
}
